[gd_scene load_steps=7 format=2]

[ext_resource path="res://dodge_assets/art/shield-1.png" type="Texture" id=1]
[ext_resource path="res://dodge_assets/art/zap1.wav" type="AudioStream" id=2]
[ext_resource path="res://dodge_assets/art/coin_02.wav" type="AudioStream" id=3]
[ext_resource path="res://Shield.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "active",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 33.0606

[node name="Area2D_Shield" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "active"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="ShieldActive" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShieldSleep" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ShieldActivatedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ShieldReadySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="ShieldActive" to="." method="_on_ShieldActive_timeout"]
[connection signal="timeout" from="ShieldSleep" to="." method="_on_ShieldSleep_timeout"]
